Question 37: Regenerate test artefacts
This commit contains regression test artefacts that show what has
changed following the replacement of Yes/No options with the dispute
criteria.

The question 37 options have also been updated listing the criteria
and the expected results have been generated to reflect the following
possible flows that a user could take:

--- a/test/data/uk-benefits-abroad-questions-and-responses.yml
+++ b/test/data/uk-benefits-abroad-questions-and-responses.yml
@@ -75,8 +75,11 @@
 - 'yes'
 - 'no'
 :is_any_of_the_following_apply?:
-- 'yes'
-- 'no'
+- trades_dispute
+- full_time_secondary_education
+- appealing_against_decision
+- trades_dispute,appealing_against_decision
+- none
 :jsa_how_long_abroad?:
 - less_than_a_year_medical
 - less_than_a_year_other
