Question 33: Regenerate test artefacts
This commit contains regression test artefacts that show what has
changed following the replacement of Yes/No options with the partner
premiums.

The question 33 options have also been updated listing the criteria
and the expected results have been generated to reflect the following
possible flows that a user could take:

--- a/test/data/uk-benefits-abroad-questions-and-responses.yml
+++ b/test/data/uk-benefits-abroad-questions-and-responses.yml
@@ -63,8 +63,12 @@
 - 'yes'
 - 'no'
 :is_claiming_benefits?:
-- 'yes'
-- 'no'
+- pension_premium
+- higher_pensioner
+- disability_premium
+- severe_disability_premium
+- pension_premium,higher_pensioner
+- none
 :is_either_of_the_following?:
 - 'yes'
 - 'no'
