--- a/test/data/uk-benefits-abroad-responses-and-expected-results.yml
+++ b/test/data/uk-benefits-abroad-responses-and-expected-results.yml
@@ -986,7 +986,7 @@
   - going_abroad
   - income_support
   - is_under_a_year_other
-  - 'yes'
+  - pension_premium
   :next_node: :is_claiming_benefits_outcome
   :outcome_node: true
 - :current_node: :is_claiming_benefits?
@@ -994,7 +994,39 @@
   - going_abroad
   - income_support
   - is_under_a_year_other
-  - 'no'
+  - higher_pensioner
+  :next_node: :is_claiming_benefits_outcome
+  :outcome_node: true
+- :current_node: :is_claiming_benefits?
+  :responses:
+  - going_abroad
+  - income_support
+  - is_under_a_year_other
+  - disability_premium
+  :next_node: :is_claiming_benefits_outcome
+  :outcome_node: true
+- :current_node: :is_claiming_benefits?
+  :responses:
+  - going_abroad
+  - income_support
+  - is_under_a_year_other
+  - severe_disability_premium
+  :next_node: :is_claiming_benefits_outcome
+  :outcome_node: true
+- :current_node: :is_claiming_benefits?
+  :responses:
+  - going_abroad
+  - income_support
+  - is_under_a_year_other
+  - pension_premium,higher_pensioner
+  :next_node: :is_claiming_benefits_outcome
+  :outcome_node: true
+- :current_node: :is_claiming_benefits?
+  :responses:
+  - going_abroad
+  - income_support
+  - is_under_a_year_other
+  - none
   :next_node: :is_either_of_the_following?
   :outcome_node: false
 - :current_node: :is_either_of_the_following?
@@ -1002,7 +1034,7 @@
   - going_abroad
   - income_support
   - is_under_a_year_other
-  - 'no'
+  - none
   - 'yes'
   :next_node: :is_abroad_for_treatment?
   :outcome_node: false
@@ -1011,7 +1043,7 @@
   - going_abroad
   - income_support
   - is_under_a_year_other
-  - 'no'
+  - none
   - 'yes'
   - 'yes'
   :next_node: :is_abroad_for_treatment_outcome
@@ -1021,7 +1053,7 @@
   - going_abroad
   - income_support
   - is_under_a_year_other
-  - 'no'
+  - none
   - 'yes'
   - 'no'
   :next_node: :is_work_or_sick_pay?
@@ -1031,7 +1063,7 @@
   - going_abroad
   - income_support
   - is_under_a_year_other
-  - 'no'
+  - none
   - 'yes'
   - 'no'
   - 'yes'
@@ -1042,7 +1074,7 @@
   - going_abroad
   - income_support
   - is_under_a_year_other
-  - 'no'
+  - none
   - 'yes'
   - 'no'
   - 'no'
@@ -1053,7 +1085,7 @@
   - going_abroad
   - income_support
   - is_under_a_year_other
-  - 'no'
+  - none
   - 'no'
   :next_node: :is_any_of_the_following_apply?
   :outcome_node: false
@@ -1062,7 +1094,7 @@
   - going_abroad
   - income_support
   - is_under_a_year_other
-  - 'no'
+  - none
   - 'no'
   - trades_dispute
   :next_node: :is_not_eligible_outcome
@@ -1072,7 +1104,7 @@
   - going_abroad
   - income_support
   - is_under_a_year_other
-  - 'no'
+  - none
   - 'no'
   - full_time_secondary_education
   :next_node: :is_not_eligible_outcome
@@ -1082,7 +1114,7 @@
   - going_abroad
   - income_support
   - is_under_a_year_other
-  - 'no'
+  - none
   - 'no'
   - appealing_against_decision
   :next_node: :is_not_eligible_outcome
@@ -1092,7 +1124,7 @@
   - going_abroad
   - income_support
   - is_under_a_year_other
-  - 'no'
+  - none
   - 'no'
   - trades_dispute,appealing_against_decision
   :next_node: :is_not_eligible_outcome
@@ -1102,7 +1134,7 @@
   - going_abroad
   - income_support
   - is_under_a_year_other
-  - 'no'
+  - none
   - 'no'
   - none
   :next_node: :is_abroad_for_treatment_outcome
