Question 34: Regenerate test artefacts
This commit contains regression test artefacts that show what has
changed following the replacement of Yes/No options with the partner
impairments.

The question 34 options have also been updated listing the impairments
and the expected results have been generated to reflect the following
possible flows that a user could take:

--- a/test/data/uk-benefits-abroad-questions-and-responses.yml
+++ b/test/data/uk-benefits-abroad-questions-and-responses.yml
@@ -70,8 +70,10 @@
 - pension_premium,higher_pensioner
 - none
 :is_either_of_the_following?:
-- 'yes'
-- 'no'
+- too_ill_to_work
+- temporarily_incapable_of_work
+- too_ill_to_work,temporarily_incapable_of_work
+- none
 :is_abroad_for_treatment?:
 - 'yes'
 - 'no'
