Question 36: Regenerate test artefacts
This commit contains regression test artefacts that show what has
changed following the replacement of Yes/No options with the periods
of impairments.

The question 36 options have also been updated listing the impairment
period and the expected results have been generated to reflect the
following possible flows that a user could take:

--- a/test/data/uk-benefits-abroad-questions-and-responses.yml
+++ b/test/data/uk-benefits-abroad-questions-and-responses.yml
@@ -78,8 +78,10 @@
 - 'yes'
 - 'no'
 :is_work_or_sick_pay?:
-- 'yes'
-- 'no'
+- 364_days
+- 196_days
+- 364_days,196_days
+- none
 :is_any_of_the_following_apply?:
 - trades_dispute
 - full_time_secondary_education
