Question 20: Regenerate test artefacts
This commit contains regression test artefacts that show what has
changed following the replacement of Yes/No options with the tax
credit benefits.

The question 20 options have also been updated listing the tax credit
benefits and the expected results have been generated to reflect the
following possible flows that a user could take:

--- a/test/data/uk-benefits-abroad-questions-and-responses.yml
+++ b/test/data/uk-benefits-abroad-questions-and-responses.yml
@@ -50,8 +50,15 @@
 - 'yes'
 - 'no'
 :tax_credits_currently_claiming?:
-- 'yes'
-- 'no'
+- state_pension
+- widows_benefit
+- incapacity_benefit
+- bereavement_benefit
+- severe_disablement_allowance
+- industrial_injuries_disablement_benefit
+- contribution_based_employment_support_allowance
+- widows_benefit,contribution_based_employment_support_allowance
+- none
 :tax_credits_why_going_abroad?:
 - tax_credits_holiday
 - tax_credits_medical_treatment
