--- a/test/data/calculate-your-child-maintenance-files.yml
+++ b/test/data/calculate-your-child-maintenance-files.yml
@@ -1,6 +1,7 @@
 ---
 lib/data/child_maintenance_data.yml: a8cd91247e67f9f6bafdb93fb4ff8166
-lib/smart_answer/calculators/child_maintenance_calculator.rb: 467f35755c170c35f13c4c2370e965ae
+lib/list_validator.rb: a7f9210a3f89c7b63703606739be2f7e
+lib/smart_answer/calculators/child_maintenance_calculator.rb: 90561c929d1f42789955b042db05de37
 lib/smart_answer_flows/calculate-your-child-maintenance/_disclaimer.govspeak.erb: 4c59b8e3ac5f5071d11ee84e0d6a508b
 lib/smart_answer_flows/calculate-your-child-maintenance/calculate_your_child_maintenance.govspeak.erb: 970161fad7a881b3ae2969d405029af4
 lib/smart_answer_flows/calculate-your-child-maintenance/outcomes/flat_rate_result.govspeak.erb: b690c19299bfaadf511d35335487e3b1
