--- a/test/data/uk-benefits-abroad-files.yml
+++ b/test/data/uk-benefits-abroad-files.yml
@@ -1,5 +1,6 @@
 ---
-lib/smart_answer/calculators/uk_benefits_abroad_calculator.rb: 24fb8eeaeca45a343eb3b63189eb2ad3
+lib/list_validator.rb: a7f9210a3f89c7b63703606739be2f7e
+lib/smart_answer/calculators/uk_benefits_abroad_calculator.rb: 7da5bdb075f1420236d5fd16325eac14
 lib/smart_answer_flows/uk-benefits-abroad/outcomes/_tax_credits_already_abroad_helpline.govspeak.erb: d79b1b09c2fe01c66cdda028a7679b8b
 lib/smart_answer_flows/uk-benefits-abroad/outcomes/_tax_credits_going_abroad_helpline.govspeak.erb: 1ceb38a208a4d7f9a9b813a33856fc78
 lib/smart_answer_flows/uk-benefits-abroad/outcomes/bb_already_abroad_eea_outcome.govspeak.erb: 29a2e99d0c3d251af8ec60c20e204549
