Create one outcome per path for Cambodia
- Create a title template
- Add outcomes templates
- Add Cambodia to 18 countries list
- Add tests
- Remove old Cambodia entries
- Update checksums

--- a/lib/data/marriage_abroad_data.yml
+++ b/lib/data/marriage_abroad_data.yml
@@ -5,6 +5,7 @@ countries_with_18_outcomes:
   - brazil
   - british-indian-ocean-territory
   - burma
+  - cambodia
   - chile
   - colombia
   - denmark
